remove gvoice, add github

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 	var contactServices = [
 		{ serviceTitle: "LinkedIn", serviceLink: "http://linkedin.com/in/scottwilleke", logo: "images/linkedin.png" },
 		{ serviceTitle: "Twitter", serviceLink: "http://twitter.com/activescott", logo: "images/twitter.png" },
-		{ serviceTitle: "Google+", serviceLink: "http://j.mp/scottatgoogle", logo: "images/google+.png" },
+		{ serviceTitle: "Github", serviceLink: "http://github.com/activescott", logo:"images/GitHub-Mark-32px.png" },		
 		{ serviceTitle: "Email", serviceLink: "scott at willeke dot com", logo: "images/email.png" },
-		{ serviceTitle: "Google voice", serviceLink: "if you know it you can call it :)", logo:"images/googlevoice.png" },
+		{ serviceTitle: "stackoverflow", serviceLink: "http://j.mp/scottonstackexchange", logo: "images/stackoverflow.png" },
 		{ serviceTitle: "Blog", serviceLink: "http://blog.scott.willeke.com", logo: "images/blog.png" },
-		{ serviceTitle: "stackoverflow", serviceLink: "http://j.mp/scottonstackexchange", logo: "images/stackoverflow.png" }
+		{ serviceTitle: "Google+", serviceLink: "http://j.mp/scottatgoogle", logo: "images/google+.png" }
 	];
 	/*due to the rotation they come out in a seemingly reversed order*/
 	contactServices = contactServices.reverse();
