--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 				With all the publishing options we have today, I'm not big on a "personal website" so this is to mostly provide links to some of the places you can find me online. See the links below.
 			</p>
 			<p>
-				I have a background in a startup with Data Dynamics where we created DynamiCube, ActiveReports, ActiveBar, ActiveCube, and ActiveAnalysis. 
-				Data Dynamics was acquired by <a href="http://www.GrapeCity.com" target="_blank">GrapeCity</a> where I envisioned and created <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a> and am currently serving as the lead Product Manager. 
+				I have a background in a startup with Data Dynamics where we created BI components for programmers including DynamiCube, ActiveReports, and ActiveAnalysis.
+				Data Dynamics was acquired by <a href="http://www.GrapeCity.com" target="_blank">GrapeCity</a> where I went on to envision and create <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a>. I am currently the Technical Product Manager at <a href="http://www.daptiv.com" target="_blank">Daptiv</a> responsible for the Cloud Platform. 
 			</p>
-			<p>Occasionally I do some consulting work on intersting high-tech projects where I can learn new things and use my expertise.</p>
+			<p>Occasionally I do some consulting work on high-tech projects where I can learn new things and add value.</p>
 			<dl>
 				<dt>Expertise &amp; Skills</dt>
-				<dd>Product Management, Leadership, Agile Facilitation/Project Management, Data Visualization, Client and server-based Programming (C#, HTML5, JavaScript, CSS, C++, etc.), </dd>
+				<dd>Product Management, Leadership, Agile Facilitation/Project Management, Data Visualization, Programming.</dd>
 				<dt>Availability</dt>
-				<dd>Depends.</dd>
+				<dd>Varies with interest level :)</dd>
 			</dl>
 			<div id="photos">
 				<img id="photo1" src="images/scottphoto1.png" />
