--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				With all the publishing options we have today, I'm not big on a "personal website" so this is to mostly provide links to some of the places you can find me online. See the links below.
 			</p>
 			<p>
-				I have a background in a startup with <a href="https://en.wikipedia.org/wiki/Data_Dynamics">Data Dynamics</a> where we created BI components for programmers including DynamiCube, ActiveReports, and ActiveAnalysis.
-				Data Dynamics was acquired by <a href="http://www.GrapeCity.com" target="_blank">GrapeCity</a> where I went on to pitch and create <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a>. I am currently the Technical Product Manager at <a href="http://www.daptiv.com" target="_blank">Daptiv</a> responsible for the Cloud Platform. 
+				I have a background in a startup with <a href="https://en.wikipedia.org/wiki/Data_Dynamics" target="_blank">Data Dynamics</a> where we created BI components for programmers including DynamiCube, ActiveReports, and ActiveAnalysis.
+				Data Dynamics was acquired by <a href="http://www.grapecity.com" target="_blank">GrapeCity</a> where I went on to pitch and create <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a>. I am currently the Technical Product Manager at <a href="http://www.daptiv.com" target="_blank">Daptiv</a> responsible for the Cloud Platform. 
 			</p>
 			<p>Occasionally I do some consulting work on high-tech projects where I can learn new things and add value.</p>
 			<dl>
