--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 contactServices:
- - { serviceTitle: "Google+", serviceLink: "http://j.mp/scottatgoogle", logo: "images/google+.png" }
  - { serviceTitle: "Blog", serviceLink: "http://blog.scott.willeke.com", logo: "images/blog.png" }
  - { serviceTitle: "stackoverflow", serviceLink: "http://j.mp/scottonstackexchange", logo: "images/stackoverflow.png" }
  #- { serviceTitle: "Email", serviceLink: "scott at willeke dot com", logo: "images/email.png" }
@@ -24,18 +23,16 @@ contactServices:
 			<h1>Scott Willeke</h1>
 			<h2>LIVES HERE</h2>
 			<p>
-				With all the publishing options available, a "personal website" seems silly, so this is directs you to some of the places you can find me online.
+				Currently I'm a Product Manager at Amazon working on Kindle stuff. Before that I was a Product Manager at the cloud-based Project Portfolio Management product <a href="http://www.daptiv.com/" target="_blank">Daptiv</a> where I led project scheduling and core platform initiatives. 
 			</p>
 			<p>
-				I have a background in a startup with <a href="https://en.wikipedia.org/wiki/Data_Dynamics" target="_blank">Data Dynamics</a> where we created BI components for programmers including DynamiCube, ActiveReports, and ActiveAnalysis.
-				Data Dynamics was acquired by <a href="http://www.grapecity.com" target="_blank">GrapeCity</a> where I went on to pitch and create <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a>. I am currently the Technical Product Manager at <a href="http://www.daptiv.com" target="_blank">Daptiv</a> responsible for our platform.
+				I have a background creating commercial products for developers beginning with the startup <a href="https://en.wikipedia.org/wiki/Data_Dynamics" target="_blank">Data Dynamics</a> where we created products now sold under ComponentOne including ActiveReports and ActiveAnalysis. Data Dynamics was acquired by <a href="http://www.grapecity.com" target="_blank">GrapeCity</a> where I went on to pitch, build, and launch <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a>.
 			</p>
-			<p>Occasionally I do some consulting work on high-tech projects where I can learn new things and add value.</p>
 			<dl>
 				<dt>Expertise &amp; Skills</dt>
 				<dd>Product Management, Leadership, Agile Facilitation/Project Management, Data Visualization, Programming.</dd>
 				<dt>Availability</dt>
-				<dd>Varies with interest level :)</dd>
+				<dd>Not currently seeking opportunities.</dd>
 			</dl>
 			<div id="photos">
 				<img id="photo1" src="images/scottphoto1.png" />
