--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ contactServices:
 				Currently I'm a Product Manager at Amazon Web Services working on mobile stuff. Before that I was a Product Manager at the cloud-based Project Portfolio Management product <a href="http://www.daptiv.com/" target="_blank">Daptiv</a> where I led project scheduling and core platform initiatives.
 			</p>
 			<p>
-				I have a background creating commercial products for developers beginning with the startup <a href="https://en.wikipedia.org/wiki/Data_Dynamics" target="_blank">Data Dynamics</a> where we created products now sold under GrapeCity including ActiveReports and ActiveAnalysis. Data Dynamics was acquired by <a href="http://www.grapecity.com" target="_blank">GrapeCity</a> where I went on to pitch, build, and launch <a href="http://www.ActiveReportsServer.com" target="_blank">ActiveReports Server</a>.
+				I have a background creating commercial products for developers beginning with the startup <a href="https://en.wikipedia.org/wiki/Data_Dynamics" target="_blank">Data Dynamics</a> where we created products now sold under GrapeCity including <a href="http://activereports.grapecity.com/" target="_blank">ActiveReports</a> and ActiveAnalysis. Data Dynamics was acquired by <a href="http://www.grapecity.com" target="_blank">GrapeCity</a> where I went on to pitch, build, and launch <a href="http://activereports.grapecity.com/Products/ActiveReportsServer/" target="_blank">ActiveReports Server</a>.
 			</p>
 			<dl>
 				<dt>Expertise &amp; Skills</dt>
