--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 contactServices:
  - { serviceTitle: "Blog", serviceLink: "http://blog.scott.willeke.com", logo: "images/blog.png" }
- - { serviceTitle: "stackoverflow", serviceLink: "http://j.mp/scottonstackexchange", logo: "images/stackoverflow.png" }
+ - { serviceTitle: "stackoverflow", serviceLink: "http://j.mp/scottstack", logo: "images/stackoverflow.png" }
  #- { serviceTitle: "Email", serviceLink: "scott at willeke dot com", logo: "images/email.png" }
  - { serviceTitle: "Github", serviceLink: "http://github.com/activescott", logo: "images/GitHub-Mark-32px.png" }	
  - { serviceTitle: "LinkedIn", serviceLink: "http://linkedin.com/in/scottwilleke", logo: "images/linkedin.png" }
