fix: content updates

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@ contactServices:
       type="text/css"
       media="screen"
     />
-    {% include ganalytics-inc.html %} {% include cloudflare-analytics-inc.html
-    %}
+    {% include cloudflare-analytics-inc.html %}
   </head>
 
   <body>
@@ -42,19 +41,27 @@ contactServices:
         <h1>Scott Willeke</h1>
         <h2>Product Guy</h2>
         <p>
-          Most recently I was Sr. Director of Engineering at
+          Most recently I was <b>CTO</b> leading Product & Engineering at
+          <a href="https://www.vouched.id">Vouched</a>. Vouched is an AI-powered
+          identity verification company that helps businesses verify the
+          identity of their customers in real time.
+        </p>
+        <p>
+          Before that I was Sr. Director of Engineering at
           <a href="https://www.smartsheet.com/" target="_blank">Smartsheet</a>
-          where I supported teams refactoring the Access & Identity services
-          from a scrappy startup's monolith to scalable performant microservices
-          that support millions of users with predictable performance and rapid
-          incremental deployments. I supported the teams growing from ~25 to ~45
-          engineers. Prior to that I was a Sr. Director in Smartsheet's Product
-          Management organization supporting teams that envisioned and launched
-          Smartsheet's Automated Workflows offering, Conversations,
-          Notifications, core experience navigation, and many integrations.
-          Previously I was at Amazon Web Services working on mobile identity
-          stuff. Prior to that I led the project scheduling capability and core
-          platform initiatives at
+          where I led the refactoring of Access & Identity services from a
+          monolith to scalable microservices that support millions of users with
+          predictable performance and rapid incremental deployments. I supported
+          the teams growing from ~25 to ~45 engineers. Prior to that I was a
+          <b>Sr. Director of Product Management</b> supporting teams that
+          envisioned and launched Smartsheet's Automated Workflows offering,
+          Conversations, Notifications, core experience navigation, and many
+          integrations.
+        </p>
+        <p>
+          As a <b>Senior Product Manager</b>, I also built mobile identity
+          services at Amazon Web Services, and I led core platform initiatives
+          at
           <a
             href="https://www.planview.com/products-solutions/products/daptiv/"
             target="_blank"
@@ -62,8 +69,8 @@ contactServices:
           >.
         </p>
         <p>
-          My background is creating products for developers beginning with the
-          startup
+          I started my career as a <b>Developer</b> and eventually
+          <b>Head of Engineering</b> creating products for developers at
           <a href="https://en.wikipedia.org/wiki/Data_Dynamics" target="_blank"
             >Data Dynamics</a
           >
@@ -71,7 +78,7 @@ contactServices:
           <a href="https://www.grapecity.com/activereports" target="_blank"
             >ActiveReports</a
           >
-          and DynamiCube. Data Dynamics was acquired by
+          and DynamiCube. After nearly 10 years, Data Dynamics was acquired by
           <a href="https://www.grapecity.com" target="_blank">GrapeCity</a>
           where I went on to pitch, build, and launch an ActiveReports-based
           product for Enterprise Customers.
@@ -80,12 +87,31 @@ contactServices:
           <dt>Expertise &amp; Skills</dt>
           <dd>
             Product Management, Leadership, Customer Development, Agile
-            Coaching, Code (TypeScript, React, Node.js .NET, etc...), CI/CD,
-            Site Reliability & Operations, Application Security.
+            Coaching, Programming (TypeScript, React, Node.js, .NET, and
+            others), CI/CD, Site Reliability & Operations, Application Security.
           </dd>
           <dt>Availability</dt>
           <dd>
-            <bold style="color: red;">Seeking Consulting Opportunities</bold>.
+            <p>
+              I am available for contract positions as a Lead Software Engineer
+              or Lead Product Manager. I welcome individual contributor roles or
+              leading teams of engineers through a project. I will also consider
+              fractional CTO roles for the right team. Over 25 years, I have
+              helped teams navigate challenges with code and operations. I help
+              speed up delivery while improving scalability and reliability.
+            </p>
+            <p>
+              I also advise on Product Management. Anything from defining
+              product strategy to embedding with engineers to deliver a feature.
+              I can support the C-level with customer research to articulate a
+              product strategy whether they're preparing for their series A or
+              their S-1. I help teams deliver software that customers buy. I do
+              so by clarifying customer needs and making smart tradeoff
+              decisions. I support product launch through close collaboration
+              with marketing, customer success, and sales teams to boost sales
+              and retention. In all cases, I measure my own success by my
+              ability to drive revenue.
+            </p>
           </dd>
         </dl>
         <div id="photos">
@@ -105,139 +131,6 @@ contactServices:
         </div>
         {% endfor %}
       </div>
-
-      <!-- red highlight lines just for fun -->
-      <div id="highlightlinesContainerTop">
-        <img
-          id="highlight_lines_box_tl"
-          class="highlighline"
-          src="images/highlight_lines_box_tl.png"
-          width="150"
-          height="150"
-        />
-        <img
-          id="highlight_lines_box_t"
-          class="highlighline"
-          src="images/highlight_lines_box_t.png"
-          width="292"
-          height="68"
-        />
-        <img
-          id="highlight_lines_box_tr"
-          class="highlighline"
-          src="images/highlight_lines_box_tr.png"
-          width="150"
-          height="150"
-        />
-      </div>
-      <div id="highlightlinesContainerMiddle">
-        <img
-          id="highlight_lines_box_l"
-          class="highlighline"
-          src="images/highlight_lines_box_l.png"
-          width="109"
-          height="348"
-        />
-        <img
-          id="highlight_lines_box_r"
-          class="highlighline"
-          src="images/highlight_lines_box_r.png"
-          width="71"
-          height="350"
-        />
-      </div>
-      <div id="highlightlinesContainerBottom">
-        <img
-          id="highlight_lines_box_bl"
-          class="highlighline"
-          src="images/highlight_lines_box_bl.png"
-          width="150"
-          height="150"
-        />
-        <img
-          id="highlight_lines_box_b"
-          class="highlighline"
-          src="images/highlight_lines_box_b.png"
-          width="294"
-          height="72"
-        />
-        <img
-          id="highlight_lines_box_br"
-          class="highlighline"
-          src="images/highlight_lines_box_br.png"
-          width="150"
-          height="150"
-        />
-      </div>
     </div>
-
-    <script>
-      const topRect = document
-        .querySelector("#highlightlinesContainerTop")
-        .getBoundingClientRect()
-      const midRect = document
-        .querySelector("#highlightlinesContainerMiddle")
-        .getBoundingClientRect()
-      const bottomRect = document
-        .querySelector("#highlightlinesContainerBottom")
-        .getBoundingClientRect()
-      let allImages = document.querySelectorAll("img")
-
-      function qs(selector) {
-        return document.querySelector(selector)
-      }
-
-      function bottomOf(el) {
-        return el.getBoundingClientRect().bottom
-      }
-
-      function leftOf(el) {
-        return el.getBoundingClientRect().x
-      }
-
-      function rightOf(el) {
-        return el.getBoundingClientRect().right
-      }
-
-      function widthOf(el) {
-        return el.getBoundingClientRect().width
-      }
-
-      function heightOf(el) {
-        return el.getBoundingClientRect().height
-      }
-
-      const main = qs("#main")
-      const tl = qs("#highlight_lines_box_tl")
-      const t = qs("#highlight_lines_box_t")
-      const tr = qs("#highlight_lines_box_tr")
-      const tops = [tl, t, tr]
-
-      const l = qs("#highlight_lines_box_l")
-      const r = qs("#highlight_lines_box_r")
-      const mids = [l, r]
-
-      const bl = qs("#highlight_lines_box_bl")
-      const b = qs("#highlight_lines_box_b")
-      const br = qs("#highlight_lines_box_br")
-      const bottoms = [bl, b, br]
-      const lines = [...tops, ...mids, ...bottoms]
-      
-      lines.forEach((img) => (img.style.display = "block"))
-
-      // top lines:
-      tops.forEach((img) => (img.style.top = -30 + "px"))
-      tl.style.left = leftOf(main) + "px"
-      t.style.left = rightOf(tl) + "px"
-      tr.style.left = rightOf(t) + "px"
-      // mid lines:
-      mids.forEach((img) => (img.style.top = bottomOf(tl) + "px"))
-      r.style.left = rightOf(tr) - widthOf(r) + "px"
-      // bottom lines
-      bottoms.forEach((img) => (img.style.top = bottomOf(l) + "px"))
-      b.style.left = rightOf(bl) + "px"
-      br.style.left = rightOf(r) - widthOf(br) + "px"
-      b.style.top = bottomOf(br) - heightOf(b) + "px"
-    </script>
   </body>
 </html>
